--- a/Client/index.html
+++ b/Client/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <header>
