--- a/Client/index.html
+++ b/Client/index.html
@@ -60,5 +60,9 @@
     <!--Products Container-->
     <div id="prod-list" class="prod-list"></div>
     <script src="./script/script.js"></script>
+
+
+
+    <!--ALBERTO NEEDS HELP-->
 </body>
 </html>
