updated the styles of home page

--- a/Client/index.html
+++ b/Client/index.html
@@ -60,6 +60,7 @@
     <div class = "Pop-up"><input type="button" value=" "></div>
     <!--Products Container-->
     <div id="prod-list" class="prod-list"></div>
+    <input type="checkbox" name="" id="">
     <script src="./script/script.js"></script>
 
     <!--linking Icons-->
