--- a/Client/index.html
+++ b/Client/index.html
@@ -10,13 +10,12 @@
 </head>
 <body>
     <header>
-        <div class="spacer">
-            <div class="logo item"></div>
-            <div class="search item">
-                <input type="text" placeholder="🔎Search Products...">
-            </div>
-            <div class="account item"></div>
+        <div class="logo item">
+            <span>P</span>
+            <span>O</span>
+            <span>S</span>
         </div>
+        <input type="text" placeholder="Search Products...">
     </header>
     <div class="parent">
 
