UPDATED HEADER AND NAV BAR

--- a/Client/index.html
+++ b/Client/index.html
@@ -13,7 +13,7 @@
         <div class="spacer">
             <div class="logo item"></div>
             <div class="search item">
-                <input type="text" placeholder="🔎Search Products...">
+                <input type="text" placeholder="Search Products...">
             </div>
             <div class="account item"></div>
         </div>
@@ -22,7 +22,7 @@
 
         <!--Side Menu Bar-->
         <div class="side-bar">
-            <div class="section"><ion-icon name="home-outline"></ion-icon></div>
+            <div class="section"><ion-icon name="grid-outline"></ion-icon></div>
             <div class="section"><ion-icon name="file-tray-stacked-outline"></ion-icon></div>
             <div class="section"><ion-icon name="bag-handle-outline"></ion-icon></div>
             <div class="section"> <ion-icon name="person-circle-outline"></ion-icon></div>
@@ -32,16 +32,16 @@
         <!--Center Navigation Bar-->
         <nav>
             <ul>
-                <li> <a href="#">Main</a></li>
-                <li><a href="#">Drinks</a></li>
-                <li><a href="#">Appetizers</a></li>
-                <li><a href="#">Side</a></li>
+                <li> <a href="#">MAIN COURSE</a></li>
+                <li><a href="#">APPETIZERS</a></li>
+                <li><a href="#">DESSSERTS</a></li>
+                <li><a href="#">DRINKS</a></li>
             </ul>
         </nav>
         
         <!--Order Bar-->
         <div class="order">
-            <h3>Current Order</h3>
+            <h3>CURRENT ORDER</h3>
             <table>
                 <tr>
                     <th>Qty.</th>
